[package]
name = "haph"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
rust-version = "1.73"
description = "Hasher-agnostic static hashmaps"
documentation = "https://docs.rs/haph"
readme = "README.md"
repository = "https://github.com/astral4/haph"
license = "MIT OR Apache-2.0"
keywords = ["map", "phf", "set"]
categories = ["data-structures"]

[dependencies]
num-traits = "0.2.18"
rand = "0.8.5"
usize_cast = "1.1.0"

[lints.rust]
async_fn_in_trait = "allow"
ffi_unwind_calls = "warn"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
non_local_definitions = "warn"
nonstandard_style = { level = "deny", priority = 1 }
redundant_lifetimes = "deny"
rust_2018_idioms = { level = "deny", priority = 1 }
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"

[lints.clippy]
module_name_repetitions = { level = "allow", priority = 1 }
pedantic = "warn"
